--- a/bio.html
+++ b/bio.html
@@ -16,13 +16,9 @@
 
     <meta name="author" content="Katelyn Allana Reyes">
 
-
-
     <title> Katelyn Allana Reyes | About </title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
-
 
     <!-- style -->
 
@@ -44,16 +40,49 @@
 
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- analytics -->
+    <!-- bootstrap cover template -->
 
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-93022791-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+    <div class="site-wrapper">
 
+      <div class="site-wrapper-inner">
+
+        <div class="container">
+
+          <div class="masthead clearfix">
+            <div class="container inner">
+              <h3 class="masthead-brand">Cover</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Cover your page.</h1>
+            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
   </head>
+
+  <body>
+
+    <h1><strong>Katelyn Allana Reyes</strong></h1>
+
+    <p>
+      A current Informatics major from UC Irvine who's interested in UX design and technical writing
+    </p>
+
+  </body>
